--- a/config/config
+++ b/config/config
@@ -1,4 +1,2 @@
-[core]
-    remote = cloud2
-['remote "cloud2"']
-    url = webdavs://cloud2.ott.rd.tp.pl/remote.php/dav/files/USERNAME/Big5/data
+[eventRegistry]
+    apiKey = yourapiKey
