--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+accelerate==0.19.0
+bitsandbytes-cuda111==0.26.0.post2
 configparser==5.3.0
 click==8.1.3
 tox==4.4.6
 tqdm==4.65.0
+transformers==4.26.0
 eventregistry==8.12
 
 
@@ -17,5 +20,6 @@ pytorch_lightning==1.8.0
 --find-links https://download.pytorch.org/whl/torch_stable.html
 --find-links https://data.pyg.org/whl/torch-1.12.0+cu116.html
 torch==1.12.0+cu116
+
 
 torchmetrics==0.11.0
