--- a/experiments/config/models.yaml
+++ b/experiments/config/models.yaml
@@ -20,6 +20,13 @@ summarizer_for_news_params: &summarizer_for_news_params
     experiment_name: 'summary'
     model_name: 'anikethdev/t5-summarizer-for-news'
 
+bullet_point_summary_params: &bullet_point_summary_params
+  module: "events_mod.models.BulletPointSeq2Seq"
+  kwargs:
+    experiment_name: 'bullet_point_summary'
+    model_name: 'snrspeaks/t5-one-line-summary'
+    split_strategy: empty_line
+
 one_line_summary:
   model:
       <<: *one_line_summary_params
@@ -40,7 +47,6 @@ key_phrase_summary:
 
 bullet_point_summary:
   model:
-    <<: *one_line_summary_params
+    <<: *bullet_point_summary_params
   data_text:
     <<: *data_text_params
-  split_strategy: empty_line
