--- a/experiments/config/models.yaml
+++ b/experiments/config/models.yaml
@@ -20,6 +20,15 @@ summarizer_for_news_params: &summarizer_for_news_params
     experiment_name: 'summary'
     model_name: 'anikethdev/t5-summarizer-for-news'
 
+
+bert_summarizer_for_news_params: &bert_summarizer_for_news_params
+  module: "events_mod.models.Bert2Bert"
+  kwargs:
+    experiment_name: 'summary'
+    device: 'cuda'
+    model_name: 'bert2bert_cnn_daily_mail'
+
+
 one_line_summary:
   model:
       <<: *one_line_summary_params
@@ -37,3 +46,9 @@ key_phrase_summary:
       <<: *key_phrase_transformer_params
   data_text:
     <<: *data_text_params
+
+bert_summarizer_for_news:
+    model:
+      <<: *bert_summarizer_for_news_params
+    data_text:
+      <<: *data_text_params
